--- a/ylyun-android-sdk_demo/sdkdemo/src/main/AndroidManifest.xml
+++ b/ylyun-android-sdk_demo/sdkdemo/src/main/AndroidManifest.xml
@@ -104,6 +104,7 @@
             android:name="com.baidu.mobads.openad.FileProvider"
             android:authorities="${packageName}.bd.provider"
             android:exported="false"
+            tools:replace="android:authorities"
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
